cmake_minimum_required(VERSION 3.17)
project(DataStructure)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(SampleCode/Chapter2)
add_subdirectory(SampleCode/Chapter3)
add_subdirectory(SampleCode/Chapter4)
add_subdirectory(SampleCode/Chapter5)
add_subdirectory(SampleCode/Chapter6)
add_subdirectory(SampleCode/Chapter7)
add_subdirectory(SampleCode/Chapter8)

add_subdirectory(Homework/Chapter2)


