project(HW_Chapter2)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/)

add_executable(hw1 hw1.cc)
add_executable(hw2 hw2.cc)
add_executable(hw3 hw3.cc)
add_executable(hw4 hw4.cc)
add_executable(hw5 hw5.cc)
add_executable(hw6 hw6.cc)
add_executable(hw7 hw7.cc)
add_executable(hw8 hw8.cc)
add_executable(hw9 hw9.cc)
add_executable(hw10 hw10.cc)
