project(HW_Chapter2)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/)

add_executable(hw2-1 hw1.cc)
add_executable(hw2-2 hw2.cc)
add_executable(hw2-3 hw3.cc)
add_executable(hw2-4 hw4.cc)
add_executable(hw2-5 hw5.cc)
add_executable(hw2-6 hw6.cc)
add_executable(hw2-7 hw7.cc)
add_executable(hw2-8 hw8.cc)
add_executable(hw2-9 hw9.cc)
add_executable(hw2-10 hw10.cc)
