project(HW_Chapter3)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/)

add_executable(hw3-1 hw1.cc)
add_executable(hw3-2 hw2.cc)
add_executable(hw3-3 hw3.cc)
add_executable(hw3-4 hw4.cc)
add_executable(hw3-5 hw5.cc)
add_executable(hw3-6 hw6.cc)
add_executable(hw3-7 hw7.cc)
add_executable(hw3-8 hw8.cc)
add_executable(hw3-9 hw9.cc)
add_executable(hw3-10 hw10.cc)
